[gd_scene load_steps=14 format=3]

[ext_resource type="PackedScene" path="res://scenes/units/GoldKeeper/GoldKeeperUnit.tscn" id="1_unit"]
[ext_resource type="PackedScene" path="res://ui/HUD.tscn" id="2_hud"]
[ext_resource type="Script" path="res://scripts/camera_manager.gd" id="3_cam"]
[ext_resource type="Script" path="res://scripts/selection_manager.gd" id="4_sel"]
[ext_resource type="Script" path="res://scripts/order_manager.gd" id="5_ord"]
[ext_resource type="Script" path="res://scripts/combat_system.gd" id="6_com"]
[ext_resource type="Script" path="res://scripts/audio_manager.gd" id="7_aud"]
[ext_resource type="PackedScene" path="res://scenes/DestinationMarker.tscn" id="8_mark"]

[sub_resource type="PlaneMesh" id="PlaneMesh_ground"]
size = Vector2(100, 100)

[sub_resource type="BoxShape3D" id="BoxShape3D_ground"]
size = Vector3(100, 1, 100)

[sub_resource type="Environment" id="Environment_default"]
background_mode = 2
background_color = Color(0.08, 0.1, 0.13, 1)
ambient_light_source = 3
ambient_light_color = Color(0.7, 0.75, 0.85, 1)
ambient_light_energy = 0.8

[node name="Main" type="Node3D"]

[node name="RTS_Camera" type="Node3D" parent="."]
script = ExtResource("3_cam")

[node name="Yaw" type="Node3D" parent="RTS_Camera"]

[node name="Pitch" type="Node3D" parent="RTS_Camera/Yaw"]
rotation = Vector3(-0.9, 0, 0)

[node name="Camera3D" type="Camera3D" parent="RTS_Camera/Yaw/Pitch"]
position = Vector3(0, 0, 36)
current = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_default")

[node name="Sun" type="DirectionalLight3D" parent="."]
rotation = Vector3(-0.7, 0.8, 0)
light_energy = 1.2

[node name="Ground" type="StaticBody3D" parent="."]
collision_layer = 1
collision_mask = 1

[node name="MeshInstance3D" type="MeshInstance3D" parent="Ground"]
mesh = SubResource("PlaneMesh_ground")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ground"]
shape = SubResource("BoxShape3D_ground")
position = Vector3(0, -0.5, 0)

[node name="Managers" type="Node" parent="."]

[node name="AudioManager" type="Node" parent="Managers"]
script = ExtResource("7_aud")

[node name="SelectionManager" type="Node" parent="Managers"]
script = ExtResource("4_sel")
camera_path = NodePath("../../RTS_Camera/Yaw/Pitch/Camera3D")
selection_box_path = NodePath("../../HUD/SelectionBox")

[node name="OrderManager" type="Node" parent="Managers"]
script = ExtResource("5_ord")
camera_path = NodePath("../../RTS_Camera/Yaw/Pitch/Camera3D")
selection_manager_path = NodePath("../SelectionManager")
marker_scene = ExtResource("8_mark")

[node name="CombatSystem" type="Node" parent="Managers"]
script = ExtResource("6_com")

[node name="Units" type="Node3D" parent="."]

[node name="P1" parent="Units" instance=ExtResource("1_unit")]
position = Vector3(-8, 0, 6)
team = 0

[node name="P2" parent="Units" instance=ExtResource("1_unit")]
position = Vector3(-6, 0, 8)
team = 0

[node name="P3" parent="Units" instance=ExtResource("1_unit")]
position = Vector3(-4, 0, 6)
team = 0

[node name="E1" parent="Units" instance=ExtResource("1_unit")]
position = Vector3(7, 0, -6)
team = 1

[node name="E2" parent="Units" instance=ExtResource("1_unit")]
position = Vector3(9, 0, -8)
team = 1

[node name="E3" parent="Units" instance=ExtResource("1_unit")]
position = Vector3(5, 0, -6)
team = 1

[node name="HUD" parent="." instance=ExtResource("2_hud")]
selection_manager_path = NodePath("../Managers/SelectionManager")
combat_system_path = NodePath("../Managers/CombatSystem")
